Switch to failurePolicy: Ignore by default for webhooks
