# apis/installer/v1alpha1/kubevault_webhook_server_types.go
@@ -91,6 +91,11 @@ type WebhookAPIServerSpec struct {
 	Healthcheck                UIServerHealthcheckSpec `json:"healthcheck"`
 	Port                       int32                   `json:"port"`
 	ServingCerts               ServingCerts            `json:"servingCerts"`
+	Webhook                    WebhookSpec             `json:"webhook"`
+}
+
+type WebhookSpec struct {
+	FailurePolicy string `json:"failurePolicy"`
 }
 
 type UIServerHealthcheckSpec struct {
