# charts/kubevault/values.openapiv3_schema.yaml
@@ -2170,6 +2170,13 @@ properties:
           versionPriority:
             format: int32
             type: integer
+          webhook:
+            properties:
+              failurePolicy:
+                type: string
+            required:
+            - failurePolicy
+            type: object
         required:
         - ca
         - enableMutatingWebhook
@@ -2180,6 +2187,7 @@ properties:
         - servingCerts
         - useKubeapiserverFqdnForAks
         - versionPriority
+        - webhook
         type: object
       criticalAddon:
         type: boolean
